[package]
name = "cargo-bullhorn"
version = "0.1.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"
categories = ["development-tools::cargo-plugins"]
license = "MIT"
repository = "https://github.com/jeikabu/cargo-bullhorn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["github_pages", "hashnode", "medium"]
github_pages = ["git"]
hashnode = ["graphql_client", "slug"]
medium = ["rss", "quick-xml"]

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta"
futures = "0.3"
git = { package = "git2", version = "0.13", optional = true }
graphql_client = { version = "0.9", optional = true }
indicatif = "0.16"
quick-xml = { version = "0.22", features = ["serialize"], optional = true }
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rss = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
slug = { version = "0.1", optional = true }
thiserror = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"