[package]
name = "cargo_bullhorn"
version = "0.2.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"
categories = ["development-tools::cargo-plugins"]
license = "MIT"
repository = "https://github.com/jeikabu/cargo_bullhorn"
description = "CLI tool to publish articles and update them."

[features]
default = ["devto", "github_pages", "hashnode", "medium", "tumblr"]
devto = []
github_pages = ["git"]
hashnode = ["graphql_client", "quick-xml"]
medium = ["rss", "quick-xml"]
tumblr = ["oauth1-request", "open", "aws_sqs"]

[dependencies]
anyhow = "1.0"
aws_sqs = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "aws-sdk-sqs", optional = true }
clap = "3.0.0-beta"
futures = "0.3"
git = { package = "git2", version = "0.13", optional = true }
graphql_client = { version = "0.9", optional = true }
indicatif = "0.16"
oauth1-request = { version = "0.5", optional = true }
open = { version = "1.7", optional = true }
quick-xml = { version = "0.22", optional = true }
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rss = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
slug = "0.1"
thiserror = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
zstd = "0.9"